--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ description: > # this means to ignore newlines until "url:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-destination: build
-
+destination: ./build
+sass:
+  style: compressed
 # Build settings
 markdown: kramdown
