--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 ---
-title: Placeholder Title
+title: How To Sit
 url: http://siteleaf-jekyll.siteleaf.net
 timezone: America/New_York
+excerpt_separator: <!--more-->
 collections:
   uploads:
     title: Uploads
@@ -11,7 +12,7 @@ exclude:
 - ".gitignore"
 description: |
   Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
-baseurl: 
+baseurl:
 destination: "./build"
 sass:
   style: compressed
