--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ---
 title: Siteleaf/Jekyll
 url: http://siteleaf-jekyll.siteleaf.net
-timezone: America/New_York
+timezone: America/DC
 collections:
   uploads:
     title: Uploads
@@ -16,8 +16,8 @@ email: your-email@domain.com
 exclude:
 - ".gitignore"
 description: |
-  Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
-baseurl: 
+  Write an awesome description for your new site here.
+baseurl:
 destination: "./build"
 sass:
   style: compressed
