--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
 ---
+gems: ['jekyll-paginate']
 title: Siteleaf/Jekyll
 url: http://siteleaf-jekyll.siteleaf.net
 timezone: America/New_York
 collections:
+  news:
+    title: News
+    output: true
   uploads:
     title: Uploads
     output: true
@@ -19,7 +23,7 @@ exclude:
 - ".gitignore"
 description: |
   Write an awesome description for your new site here.
-baseurl: 
+baseurl:
 destination: "./build"
 sass:
   style: compressed
